 * ReScene: solid archives fix (threading issue)
 * ReScene: fix for archives larger than 4GB
 * ReScene: support for compression failures
            (larger packed size than unpacked size)
 * ReScene: provided -t folder does not need to be empty
 * ReScene: support for padding at the end of the RAR files
            Never.on.Sunday.1960.DVDRip.XviD-AEN and recent DAA releases
 * ReScene: -r parameter to locate renamed files when using  -q, --verify
 * ReSample: FLAC and MP3 support: backing up tags to SRS file
             + AcoustID fingerprint and duration
          	 MP3 tags: ID3v1, ID3v2, Lyrics3v1, Lyrics3v2, APEv1, APEv2
 * ReSample: -m option added to prevent using stored match offsets
 * ReSample: fixed KeyError on sample reconstruction
   The.Butterfly.Effect.3.Revelations.2009.STV.FRENCH.720p.BluRay.x264-ROUGH
             (NullReferenceException error in .NET version)
 * ReSample: fixed KeyError on sample reconstruction
             2001.A.Space.Odyssey.1968.1080p.MULTI.BluRay.x264-1080
             (KeyNotFoundException error in .NET version)
 * pyReScene Auto: DVDx and DISCx subfolders added
 * pyReScene Auto: support for music releases
 * pyReScene Auto: stores complete RARs of small fix releases
 * preprardir.py: bug with copying license file on Linux fixed
 * preprardir.py: Python 2.6 and Python 3 support
 * awescript.py: update to version 0.7 by gooober

pyReScene 0.4 (2013-02-28)
=============

 * pyReScene Auto: Fixing.Frank.2002.DVDRip.XviD-EXViD srr could not create
 * pyReScene Auto: infinite loop on The.Haunting.1963.DVDRip.XviD-FRAGMENT
 * pyReScene Auto: OS X issue fixed
 * pyReScene Auto: more subfolder detection fixes
 * pyReScene Auto: only store proof RAR files when they contain image files
 * ReSample: No sample recreation for MKV files with attachments (bug #2)
 * ReSample: Die.Simpsons.S04E02.....iNTERNAL-UTOPiA
   main AVI file with multiple audio tracks: the sample could not rebuild