@@ -440,7 +440,7 @@ def create_srr(srr_name, infiles, in_folder="",
 	save_paths:  if the path relative to in_folder 
 	             must be stored with the file name e.g. Sample/ or Proof/
 	compressed:  Do we create an SRR or not when encountered compressed files?
-	oso_hash:    Only false for the unit tests.
+	oso_hash:    Store OSO hashes or not.
 				 
 	Raises ValueError if rars in infiles are not the first of the archives.
 	"""
